[tool.poetry]
name = "streamlit-application"
version = "0.1.0"
description = ""
authors = ["Aaron <AaronBatilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.67.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
